# codecrafters-shell-c

./: .gitignore  CMakeLists.txt  README.md  your_program.sh
headers/: cat.h  echo.h  execute_bin.h  global_vars.h  locate_bin.h  parse_arg.h  sort_command.h  tab.h  type.h  types.h
headers/Navigation/: cd.h  pwd.h
src/: another_main.c  cat.c  echo.c  execute_bin.c  global_vars.c  locate_bin.c  main.c  parse_arg.c  sort_command.c  tab.c  type.c
src/Navigation/: cd.c  pwd.c
